--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="https://via.placeholder.com/250" alt="Foto Profil Anda">
                 </div>
                 <div class="bio">
-                    <h3>Halo, Aku Hans</h3>
+                    <h3>Hello, I'm Hans</h3>
                     <p>
                         I am a professional Accountant with a solid background in financial management, data analysis, and strategic planning. With years of experience in handling numbers, accuracy, and detail-oriented work, I have developed a strong foundation in problem-solving and critical thinking.
                     </p>
