--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 class="section-title">Tentang Saya</h2>
             <div class="about-content">
                 <div class="profile-picture">
-                    <img src="https://via.placeholder.com/250" alt="Foto Profil Anda">
+                    <img src="Profile.jpeg" alt="Foto Profil Hans">
                 </div>
                 <div class="bio">
                     <h3>Hello, I'm Hans</h3>
@@ -107,3 +107,4 @@
 
 </body>
 </html>
+
