--- a/keahlian2.html
+++ b/keahlian2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Details - Financial Analysis</title>
+    <title>Skill Details - Web Development</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
     <section class="detail-hero">
         <div class="container">
             <p class="detail-hero-subtitle">Skill Details</p>
-            <h1 class="detail-hero-title">Financial Analysis & Management</h1>
+            <h1 class="detail-hero-title">Web Development</h1>
         </div>
     </section>
 
@@ -33,15 +33,15 @@
         <div class="container">
             <div class="detail-main-content">
                 <div class="detail-image-column">
-                    <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=2070&auto=format&fit=crop" alt="Financial Analysis" class="page-image">
+                    <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?q=80&w=2070&auto=format&fit=crop" alt="Web Development" class="page-image">
                 </div>
                 <div class="detail-text-column">
                     <h2>In-Depth Description</h2>
                     <p>
-                        As a professional accountant, I possess deep expertise in financial analysis and management. This includes the ability to accurately manage financial records, prepare comprehensive reports, and analyze data to support effective strategic decision-making.
+                        My passion for technology is channeled through web development, where I focus on creating modern, responsive, and high-performance websites. I believe that a great website is a blend of clean aesthetics, intuitive functionality, and robust technical architecture.
                     </p>
                     <p>
-                        I am skilled in using various accounting software and data analysis tools to ensure regulatory compliance, identify financial trends, and provide valuable insights for business growth and operational efficiency.
+                        I have experience in both front-end and back-end development, allowing me to build comprehensive solutions from the user interface to the server-side logic. I am committed to writing clean, maintainable code and utilizing the latest technologies to deliver exceptional user experiences.
                     </p>
                 </div>
             </div>
@@ -53,19 +53,19 @@
             <h2 class="section-title">Key Competencies</h2>
             <div class="competency-grid">
                 <div class="competency-card">
-                    <i class="fas fa-chart-pie"></i>
-                    <h3>Budgeting & Forecasting</h3>
-                    <p>Designing budgets and projecting future financial performance for strategic planning.</p>
+                    <i class="fas fa-desktop"></i>
+                    <h3>Front-End Development</h3>
+                    <p>Building interactive user interfaces using HTML5, CSS3, and JavaScript frameworks like React.</p>
                 </div>
                 <div class="competency-card">
-                    <i class="fas fa-file-invoice-dollar"></i>
-                    <h3>Financial Reporting</h3>
-                    <p>Compiling accurate and timely income statements, balance sheets, and cash flow statements.</p>
+                    <i class="fas fa-server"></i>
+                    <h3>Back-End Development</h3>
+                    <p>Developing server-side logic, databases, and APIs to power web applications using technologies like Node.js.</p>
                 </div>
                 <div class="competency-card">
-                    <i class="fas fa-balance-scale"></i>
-                    <h3>Regulatory Compliance</h3>
-                    <p>Ensuring all financial activities adhere to applicable accounting standards and regulations.</p>
+                    <i class="fas fa-mobile-alt"></i>
+                    <h3>Responsive Design</h3>
+                    <p>Ensuring websites look and function perfectly on all devices, from desktops to mobile phones.</p>
                 </div>
             </div>
         </div>
