--- a/keahlian4.html
+++ b/keahlian4.html
@@ -4,73 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Details - Financial Analysis</title>
+    <title>Skill Details - Data Analysis</title>
 
+    <!-- Google Fonts & Font Awesome (Same as homepage) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
+    <!-- Link to the SAME CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <!-- Simple Navigation -->
     <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo">Back to Home</a>
         </div>
     </header>
 
+    <!-- Hero Section for the Detail Page -->
     <section class="detail-hero">
         <div class="container">
             <p class="detail-hero-subtitle">Skill Details</p>
-            <h1 class="detail-hero-title">Financial Analysis & Management</h1>
+            <h1 class="detail-hero-title">Data Analysis</h1>
         </div>
     </section>
 
+    <!-- Main Two-Column Content -->
     <main class="page-content">
         <div class="container">
             <div class="detail-main-content">
                 <div class="detail-image-column">
-                    <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=2070&auto=format&fit=crop" alt="Financial Analysis" class="page-image">
+                    <!-- Replace this image with one relevant to data analysis -->
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2070&auto=format&fit=crop" alt="Data Analysis" class="page-image">
                 </div>
                 <div class="detail-text-column">
                     <h2>In-Depth Description</h2>
                     <p>
-                        As a professional accountant, I possess deep expertise in financial analysis and management. This includes the ability to accurately manage financial records, prepare comprehensive reports, and analyze data to support effective strategic decision-making.
+                        My background in accounting provides a strong foundation for meticulous data analysis. I specialize in transforming raw data into actionable insights that drive business strategy and operational improvements. I believe that data is the key to unlocking an organization's full potential.
                     </p>
                     <p>
-                        I am skilled in using various accounting software and data analysis tools to ensure regulatory compliance, identify financial trends, and provide valuable insights for business growth and operational efficiency.
+                        I am proficient in using tools and programming languages like Python and SQL to clean, process, and model data. My goal is to present complex information in a clear and understandable way, enabling stakeholders to make informed, data-driven decisions with confidence.
                     </p>
                 </div>
             </div>
         </div>
     </main>
 
+    <!-- Key Competencies Section -->
     <section class="competencies-section">
         <div class="container">
             <h2 class="section-title">Key Competencies</h2>
             <div class="competency-grid">
+                <!-- Competency 1 -->
                 <div class="competency-card">
-                    <i class="fas fa-chart-pie"></i>
-                    <h3>Budgeting & Forecasting</h3>
-                    <p>Designing budgets and projecting future financial performance for strategic planning.</p>
+                    <i class="fas fa-chart-bar"></i>
+                    <h3>Data Visualization</h3>
+                    <p>Creating clear and impactful dashboards and reports to visualize complex data sets and trends.</p>
                 </div>
+                <!-- Competency 2 -->
                 <div class="competency-card">
-                    <i class="fas fa-file-invoice-dollar"></i>
-                    <h3>Financial Reporting</h3>
-                    <p>Compiling accurate and timely income statements, balance sheets, and cash flow statements.</p>
+                    <i class="fas fa-cogs"></i>
+                    <h3>Statistical Modeling</h3>
+                    <p>Applying statistical methods and machine learning techniques to forecast trends and identify patterns.</p>
                 </div>
+                <!-- Competency 3 -->
                 <div class="competency-card">
-                    <i class="fas fa-balance-scale"></i>
-                    <h3>Regulatory Compliance</h3>
-                    <p>Ensuring all financial activities adhere to applicable accounting standards and regulations.</p>
+                    <i class="fas fa-lightbulb"></i>
+                    <h3>Business Intelligence</h3>
+                    <p>Translating data-driven findings into strategic recommendations that support business growth and objectives.</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Call to Action Section -->
     <section class="cta-section">
         <div class="container">
             <h2>Interested in Collaborating?</h2>
@@ -79,6 +90,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2025 - HansSites. All rights reserved.</p>
